# RE-Agent

./: .gitignore  README.md  app.py  list_models.py  list_models_robust.py  mcp_utils.py  requirements.txt  style.css  test_prefix.py
mcp_server/: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  INTERESTING_QUERIES.md  LICENSE  Makefile  PRODUCTION_READY.md  QUICKSTART.md  README.md  TEST_RESULTS.md  UPDATES_NEEDED.md  UPSTREAM_FIXES.md  docker-compose.yml  pyproject.toml  server.py  test_new_geomech_tools.py  test_server.py  test_tools.py
mcp_server/SKILL/: SKILL.md  pyrestoolbox-mcp.skill  tools-reference.md
mcp_server/examples/: README.md  basic_usage.py  black_oil_table_generation.py  brine_properties_example.py  component_library_example.py  gas_properties_workflow.py  gas_well_analysis.py  geomechanics_workflow.py  pvt_workflow.py  rachford_rice_flash.py  relative_permeability_tables.py  reservoir_heterogeneity.py  run_examples.sh  well_performance_analysis.py
mcp_server/guide/: pyRestToolbox_MCP_Formula_Reference.tex
mcp_server/pyrestoolbox_mcp/: __init__.py  config.py  server.py
mcp_server/pyrestoolbox_mcp/models/: __init__.py  brine_models.py  common_models.py  dca_models.py  gas_models.py  geomech_models.py  inflow_models.py  layer_models.py  library_models.py  matbal_models.py  nodal_models.py  oil_models.py  recommend_models.py  sensitivity_models.py  simtools_models.py
mcp_server/pyrestoolbox_mcp/resources/: __init__.py  config_resources.py
mcp_server/pyrestoolbox_mcp/tools/: __init__.py  brine_tools.py  dca_tools.py  gas_fixes.py  gas_tools.py  geomech_tools.py  (+9 more)
mcp_server/tests/: __init__.py  conftest.py  test_brine_new.py  test_dca_tools.py  test_gas_tools.py  test_geomech_tools.py  test_matbal_tools.py  test_nodal_tools.py  test_oil_tools.py  test_recommend_tools.py  test_simtools_new.py
(+9 files in other folders)
